<resources>
    <string name="app_name">NetCaff</string>
    <string name="scan_action">Scan</string>
    <string name="scanning_text">Scanning</string>
    <string name="caffnet_icon_description">The CaffNet App Icon</string>
    <string name="order_id_label">Id:</string>
    <string name="order_status_label">Status:</string>
    <string name="order_duration_label">Ready:</string>
    <string name="found_servers_label">Available Servers</string>
    <string name="coffee_server_id_label">Server ID:</string>
    <string name="coffee_server_addr_label">Server Address:</string>
    <string name="coffee_server_out_of_range">Remembered - Out of Range</string>
    <string name="machine_label">Coffee Maker</string>
    <string name="no_servers_label">No Coffee Makers</string>
    <string name="no_servers_desc">No coffee makers have been detected in range of your device and there are none remembered from a previous connection. Tap scan to search for devices in range.</string>
    <string name="order_label">Your Order</string>
    <string name="status_label">Status</string>
    <string name="water_level_label">Water Level:</string>
    <string name="coffee_level_label">Coffee Level:</string>
    <string name="connect_label">Connect</string>
    <string name="rescan_label">Rescan</string>
    <string name="request_label">Order</string>
    <string name="requesting_label">Ordering</string>
    <string name="pour_label">Pour</string>
    <string name="pouring_label">Pouring</string>
    <string name="cancel_label">Cancel</string>
    <string name="cancelling_label">Cancelling</string>
    <string name="request_read_levels_label">Refresh</string>
    <string name="request_reading_levels_label">Refreshing</string>
    <string name="login_title">Login to Coffee Maker</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="logging_in_label">Logging In</string>
    <string name="error_title">Error</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="error_msg_placeholder">Error Message Placeholder</string>
    <string name="request_permissions_title">BLE Permissions</string>
    <string name="request_permissions_text">Bluetooth scanning can detect Bluetooth beacons which often reveal information about the devices location. As such Android requires that the app be granted permission to location data in order to start a scan.</string>
    <string name="request_permissions_btn_label">Grant Permission</string>
    <string name="manager_service_description">Manages discovery, connections and updates for NetCaff coffee machines.</string>
</resources>
