<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/RootHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_permissions_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_permissions_text"
            android:textColor="@color/colorPrimaryText" />

        <Button
            android:id="@+id/request_permissions_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_permissions_btn_label" />

    </LinearLayout>

</android.widget.LinearLayout>