<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CoffeeCardError"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/ErrorTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_title" />

    <LinearLayout
        style="@style/CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_server_out_of_range" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismiss_label"
                style="@style/ErrorButton"/>

        </LinearLayout>

    </LinearLayout>

</android.widget.LinearLayout>