<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/machine_label"
        style="@style/RootHeader"/>

    <ListView
        android:id="@+id/order_items_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dip"
        android:divider="@android:color/transparent"
        android:dividerHeight="15dip"
        android:layout_weight="1"/>

    <LinearLayout
        style="@style/Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/comms_progress"
            style="@android:style/Widget.Holo.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_label" />

        <Button
            android:id="@+id/rescan_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescan_label" />

    </LinearLayout>

</android.widget.LinearLayout>